<resources>
    <string name="app_name">餐廳資訊</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_booking">Booking</string>
    <string name="title_account">Account</string>
    <string name="name">成大榕園餐廳</string>
    <string name="content1">位置</string>
    <string name="content1_1">701台南市東區大學路1號</string>
    <string name="content2">聯絡電話</string>
    <string name="content2_1">06－2757575</string>
    <string name="content3">營業時間</string>
    <string name="content3_1">一~五 8:00－17:00</string>
    <string name="content4">菜單</string>
    <string name="content5">本日特餐</string>
    <string name="content6">優惠詳情</string>
    <string name="content8">來自店長的介紹</string>
    <string name="intro">本校創校於西元1931年（昭和6年，民國20年）1月15日，原名為「臺南高等工業學校」；1944年（昭和19年，民國33年）改稱為「臺南工業專門學校」。民國34年臺灣光復。本校於民國35年2月改制為「臺灣省立臺南工業專科學校」，由王石安博士擔任校長；35年10月改制為「臺灣省立工學院」，仍由王石安博士擔任校長。彼時僅有成功校區，39年增購勝利校區。41年2月，由秦大鈞博士接任校長。

45年8月，本校改制為「臺灣省立成功大學」，仍由秦大鈞博士擔任校長；同時增設文理學院及商學院。46年8月，由閻振興博士接任校長。54年1月，由羅雲平博士接任校長。55年增購光復校區。58年10月，將文理學院分為文學院及理學院。60年8月，改制為「國立成功大學」，並由倪超博士接任校長；同年增購建國校區。67年8月，由王唯農博士接任校長。

69年8月，夏漢民博士接任校長；同年將商學院更名為管理學院。72年8月，增設醫學院，並增購自強校區及敬業校區。74年增購力行校區部分校地。76年增購歸仁校區，設置航空太空實驗場。77年6月本校醫學院附設醫院正式營運。77年8月，馬哲儒博士接任校長。80年增購自強校區北半部。82年陸續增購台南市「文大五」用地，闢為本校安南校區。

83年8月，吳京院士接任校長。吳校長於85年6月入閣擔任教育部長，由副校長黃定加博士代理校長。86年2月，翁政義博士接任校長。86年8月增設社會科學院。88年完成收購安南校區全部校地；同年6月增購原陸軍八○四醫院用地（91年6月完成撥用手續）。翁校長於89年5月出任國科會主委，由副校長翁鴻山博士代理校長。90年2月，高強博士接任校長。92年8月，增設電機資訊學院、規劃與設計學院。94年7月，本校配合國軍斗六醫院精實案，接管該院營運權，設置為雲林縣斗六校區，並改制為本校醫學院附設醫院斗六分院。94年8月，增設生物科學與科技學院。94年10月，本校得到教育部的肯定，獲選為「發展國際一流大學及頂尖研究中心計畫」的兩所重點大學之一。

96年2月，賴明詔院士接任校長，97年2月教育部公佈「發展國際一流大學及頂尖研究中心計畫」第二梯次的審議結果，本校繼續獲得教育部的肯定與補助，積極朝國際一流大學的目標邁進。97年10月增購歸仁校區北側台糖土地（正式登記為本校管有）。100年2月，黃煌煇博士接任校長。100年4月本校獲得教育部第二期頂尖大學計畫補助，持續朝國際一流大學的目標邁進。104年2月，蘇慧貞博士接任校長。</string>
    <string name="more">顯示更多</string>
    <string name="content9">附近的餐廳有．．．</string>
    <string name="content10">相似類型的餐廳有．．．</string>
    <string name="content7">我要訂位</string>
</resources>
