<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:text="@string/name"
        android:textColor="@color/DarkOrange"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/scrollV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ViewLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/line"
            android:showDividers="middle">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewP1"
                android:layout_width="420dp"
                android:layout_height="400dp"
                android:layout_gravity="center">
            </android.support.v4.view.ViewPager>
<!--
            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radiobutton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/radiobutton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"/>
                <RadioButton
                    android:id="@+id/radiobutton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"/>

            </RadioGroup>
!-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewP1"
                    android:layout_marginLeft="52dp"
                    android:text="@string/content1"
                    android:textColor="@color/DarkOrange"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/textView2"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/viewP1"
                    android:text="@string/content1_1"
                    android:textSize="20sp" />
            </LinearLayout>




        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_below="@id/textView2"
                    android:layout_marginTop="8dp"
                    android:text="@string/content2"
                    android:textColor="@color/DarkOrange"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textView3"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@id/textView7"
                    android:layout_marginTop="8dp"
                    android:text="@string/content2_1"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_below="@id/textView3"
                    android:layout_marginTop="8dp"
                    android:text="@string/content3"
                    android:textColor="@color/DarkOrange"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView8"
                    android:layout_toRightOf="@id/textView4"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/content3_1"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_below="@id/textView4"
                android:layout_marginTop="8dp"
                android:text="@string/content8"
                android:textColor="@color/DarkOrange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                app:layout_constraintTop_toBottomOf="@id/textView12"
                android:layout_marginTop="8dp"
                android:text="@string/intro"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxLines="3"/>

            <Button
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/more"
                android:textSize="20sp"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_below="@id/textView12"
                android:layout_marginTop="8dp"
                android:text="@string/content4"
                android:textColor="@color/DarkOrange"
                android:textSize="20sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewP2"
                android:layout_width="420dp"
                android:layout_height="400dp"
                android:layout_gravity="center">
            </android.support.v4.view.ViewPager>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_below="@id/textView5"
                android:layout_marginTop="8dp"
                android:text="@string/content5"
                android:textColor="@color/DarkOrange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_below="@id/textView10"
                android:layout_marginTop="8dp"
                android:text="@string/content6"
                android:textColor="@color/DarkOrange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_below="@id/textView11"
                android:layout_marginTop="8dp"
                android:text="@string/content9"
                android:textColor="@color/DarkOrange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_below="@id/textView13"
                android:layout_marginTop="8dp"
                android:text="@string/content10"
                android:textColor="@color/DarkOrange"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/content7"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>